--- a/exercise_01/form.html
+++ b/exercise_01/form.html
@@ -3,23 +3,23 @@
     <head>
         <title>HTML Form</title>
     </head>
-    <form action="#" method="POST">
+    <body>
+        <form action="index.php" method="POST">
         <p>
             <label for = "name">Enter Your Name: </label><br/>
-            <input type = "text" id = "name">
+            <input type = "text" id = "name" name = "name">
         </p>
         <p>
             <label for = "userId">UserName: </label><br/>
-            <input type = "text" id = "userId">
+            <input type = "text" id = "userId" name = "userId">
         </p>
         <p>
             <label for = "password">Password: </label><br/>
-            <input type = "password" id = "password">
+            <input type = "password" id = "password" name = "password">
         </p>
         <p>
             <input type="submit" value="submit">
         </p>
     </form>
-    <body>
-    </body>
+    </body> 
 </html>
